# aether-studio

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CMakeSettings.json  DEPENDENCIES.md  README.md  README_FFMPEG.md  achter sutudio.md  build_log.txt  check_cmake_syntax.ps1  check_ffmpeg_full.ps1  check_git.ps1  check_vulkan.ps1  clean_build.ps1  deep_search_ffmpeg.ps1  download_ffmpeg.ps1  download_imgui.ps1  find_ffmpeg_dev.ps1  find_ffmpeg_openssl.ps1  fix_ffmpeg.ps1  ikinci olan.md  install_vulkan.ps1  search_ffmpeg_full.ps1  validate_cmake.ps1  yeni proje.md
assets/: README.txt  settings.ini
include/aether/: Account.h  AetherLink.h  BackgroundCache.h  Clipboard.h  ColorGradeState.h  EncoderBackend.h  FrameRingBuffer.h  GlobalProjectContext.h  HardwareID.h  HardwareOrchestrator.h  KeyframeModel.h  KeymapManager.h  LicenseManager.h  MemoryManager.h  MemoryWatchdog.h  NodeGraphModel.h  PlaybackEngine.h  ProjectContext.h  ProjectFile.h  ProjectSettings.h  ProxyManager.h  RenderView.h  ResourceStreamer.h  SHA256.h  SplashScreen.h  TilingRenderer.h  Tool.h  UndoRedo.h  VideoLoader.h  VulkanVFXEngine.h  WorkspaceManager.h
shaders/: blur.comp  color_correction.comp
src/: main.cpp  main_qt.cpp
src/core/: AccountManager.cpp  Application.cpp  Application.h  BackgroundCache.cpp  Clipboard.cpp  FileDialog.cpp  FileDialog.h  GlobalProjectContext.cpp  HardwareID.cpp  HardwareOrchestrator.cpp  KeymapManager.cpp  LicenseManager.cpp  MemoryManager.cpp  MemoryWatchdog.cpp  ProjectContext.cpp  ResourceStreamer.cpp  SHA256.cpp  Tool.cpp  UndoRedo.cpp  Window.cpp  Window.h  WorkspaceManager.cpp
src/engine/encode/: FFmpegEncoder.cpp
src/engine/media/: ProxyManager.cpp  VideoLoader.cpp
src/engine/network/: AetherLink.cpp
src/engine/render/: DirectX11Renderer.cpp  DirectX11Renderer.h  DirectX12Renderer.cpp  DirectX12Renderer.h  RenderView.cpp  TilingRenderer.cpp  VulkanRenderer.cpp
src/engine/vfx/: VulkanVFXEngine.cpp
src/media/: ProxyManager.cpp  VideoLoader.cpp
src/network/: AetherLink.cpp
src/qt/: AetherRenderView.cpp  AetherRenderView.h  AnimationPageWidget.cpp  AnimationPageWidget.h  AudioMixerWidget.cpp  AudioMixerWidget.h  AudioPageWidget.cpp  AudioPageWidget.h  ColorPageWidget.cpp  ColorPageWidget.h  ColorWheelsWidget.cpp  ColorWheelsWidget.h  DeliverPageWidget.cpp  DeliverPageWidget.h  FrameRingBuffer.cpp  HomeWidget.cpp  HomeWidget.h  KeyframeModel.cpp  KeyframeTimelineWidget.cpp  KeyframeTimelineWidget.h  MainWindow.cpp  MainWindow.h  MediaPageWidget.cpp  MediaPageWidget.h  MonitorWidget.cpp  MonitorWidget.h  NewProjectDialog.cpp  NewProjectDialog.h  NodeGraphModel.cpp  NodeGraphView.cpp  NodeGraphView.h  PageBarWidget.cpp  PageBarWidget.h  PlaceholderPageWidget.cpp  PlaceholderPageWidget.h  PlaybackEngine.cpp  ProjectFile.cpp  ProjectModel.cpp  ProjectModel.h  ProjectPanel.cpp  (+9 more)
src/render/: RenderView.cpp  TilingRenderer.cpp  VulkanRenderer.cpp  VulkanRenderer.h
src/ui/: ImGuiManager.cpp  ImGuiManager.h  LoginDialog.cpp  LoginDialog.h  MainMenuBar.cpp  MainMenuBar.h  PreferencesDialog.cpp  PreferencesDialog.h  ProjectStartupDialog.cpp  ProjectStartupDialog.h  SplashScreen.cpp  StatusBar.cpp  StatusBar.h  Toolbar.cpp  Toolbar.h  WorkspaceUI.cpp  WorkspaceUI.h
src/workspaces/: ColorWorkspace.cpp  ColorWorkspace.h  EditWorkspace.cpp  EditWorkspace.h  PhotoWorkspace.cpp  PhotoWorkspace.h
